Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-121947

qDebug() output is missing newline on Windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.7.0 Beta3, 6.8.0 FF
    • 6.7.0 Beta1, 6.7.0 Beta2
    • Core: I/O
    • None
    • Windows 10
    • Windows
    • c05f987fc (dev), fdd4d5df6 (6.7)

    Description

      When debugging a Qt 6.7.0 app with, for example, VS Code and their cppvsdbg (or any other debugger for Windows), the output in the debug console is squashed together without line separators. This is very visible when a lot of messages are logged (e.g. *.debug=true).

      This bug was introduced in commit d614067ea0828390644abea2ae046b791e5ba3a8 (change-id: Ifa1111900d6945ea8e05fffd177e155db9a599cc) where the .append(u'\n') was removed in win_message_handler().

      Attachments

        For Gerrit Dashboard: QTBUG-121947
        # Subject Branch Project Status CR V

        Activity

          People

            thiago Thiago Macieira
            nerixyz Tom Fors
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes