QLogging: Add missing newline in win_message_handler()

Neither win_outputDebugString_helper() nor OutputDebugString() add a
newline at the end of the message, so one needs to be added before being
passed to the output handler.
A newline was previously present but removed when deduplicating calls to
qFormatLogMessage().

Fixes: QTBUG-121947
Change-Id: I9f1c1d8726e4234f24999f47c52340140d5a4614
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit c05f987fcd36bf2f194f0dedb37f4eea7a68e4f5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>